--- a/archivio-artisti.html
+++ b/archivio-artisti.html
@@ -68,7 +68,7 @@
             <a href="dorazio.html"><div class="titolocard2"><h2>Piero Dorazio</h2></div></a>
          </div>
          <div class="card">
-            <a href="muro.html"><img src="immagini/archivio-artisti/Il-muro-della-vita3 2.jpg" alt="Il muro della vita"></a>
+            <a href="muro.html"><img src="immagini/artisti/ilmuro.jpg" alt="Il muro della vita"></a>
             <a href="muro.html"><div class="titolocard2"><h2>Artisti Vari</h2></div></a>
          </div>
          <div class="card">
