--- a/archivio-artisti.html
+++ b/archivio-artisti.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home page</title>
+        <title>archivio-artisti</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap">
@@ -40,39 +40,39 @@
         <h1>Archivio Artisti</h1>
         <div class="container-card">
         <div class="card">
-           <a href="la-materia.html"> <img src="./immagini/artisti/pietro-consagra.jpg" alt="Pietro-Consagra"></a>
+           <img src="./immagini/artisti/pietro-consagra.jpg" alt="Pietro-Consagra"></a>
            <a href="consagra.html"><div class="titolocard2"><h2>Pietro Consagra</h2></div></a>
         </div>
         <div class="card">
-            <a href="monumento.html"><img src="./immagini/artisti/tano-festa.jpg" alt="Tano-Festa"></a>
+            <img src="./immagini/artisti/tano-festa.jpg" alt="Tano-Festa"></a>
             <a href="festa.html"><div class="titolocard2"><h2>Tano Festa</h2></div></a>
         </div>
         <div class="card">
-            <a href="stanza.html"><img src="immagini/artisti/hidetoshi-nagasawa.jpg" alt="hidetoshi-Nagasawa"></a>
+            <img src="immagini/artisti/hidetoshi-nagasawa.jpg" alt="hidetoshi-Nagasawa"></a>
             <a href="nagasawa.html"><div class="titolocard2"><h2>Hidetoshi Nagasawa</h2></div></a>
         </div>
         <div class="card ">
-            <a href=""><img src="immagini/artisti/antonio-di-palma.jpg" alt="Antonio-di-palma"></a>
+            <img src="immagini/artisti/antonio-di-palma.jpg" alt="Antonio-di-palma"></a>
             <a href="dipalma.html"><div class="titolocard2"><h2>Antonio di Palma</h2></div></a>
         </div>
         <div class="card">
-            <a href=""> <img src="immagini/artisti/paolo-schiavocampo.jpg" alt="paolo-schiavocampo"></a>
+            <img src="immagini/artisti/paolo-schiavocampo.jpg" alt="paolo-schiavocampo"></a>
             <a href="schiavocampo.html"><div class="titolocard2"><h2>Paolo Schiavocampo</h2></div></a>
          </div>
          <div class="card">
-            <a href=""> <img src="immagini/artisti/italo-lanfredini.jpg" alt="italo-lanfredini"></a>
+            <img src="immagini/artisti/italo-lanfredini.jpg" alt="italo-lanfredini"></a>
             <a href="lanfredini.html"><div class="titolocard2"><h2>Italo Lanfredini</h2></div></a>
          </div>
          <div class="card">
-            <a href=""> <img src="immagini/artisti/piero-dorazio.jpg" alt="piero-dorazio"></a>
+            <img src="immagini/artisti/dorazio.jpg" alt="piero-dorazio"></a>
             <a href="dorazio.html"><div class="titolocard2"><h2>Piero Dorazio</h2></div></a>
          </div>
          <div class="card">
-            <a href="muro.html"><img src="immagini/artisti/ilmuro.jpg" alt="Il muro della vita"></a>
+            <img src="immagini/artisti/ilmuro.jpg" alt="Il muro della vita"></a>
             <a href="muro.html"><div class="titolocard2"><h2>Artisti Vari</h2></div></a>
          </div>
          <div class="card">
-            <a href="piramide.html"><img src="immagini/artisti/mauro-staccioli.jpg" alt="mauro-staccioli"></a>
+            <img src="immagini/artisti/mauro-staccioli.jpg" alt="mauro-staccioli"></a>
             <a href="staccioli.html"><div class="titolocard2"><h2>Mauro Staccioli</h2></div>
          </div>
         </section>
