--- a/dipalma.html
+++ b/dipalma.html
@@ -10,32 +10,32 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap">
 </head>
 <body>
-    <header>
-      <div class="menugenerale">
-        <div class="logomenu">
-          <a href="index.html">
-            <img src="./immagini/fiumara-9.png" alt="">
-          </a>
-        </div>
-        <div class="listamenu">
-          <ul>
-            <li>
-              <a href="storia.html">storia</a>
-            </li>
-            <li>
-              <a href="artisti.html">artisti</a>
-            </li>
-            <li>
-              <a href="tour.html">tour</a>
-            </li>
-          </ul>
-        </div>
+  <header>
+    <div class="menugenerale">
+      <div class="logomenu">
+        <a href="index.html">
+          <img src="./immagini/home/logotipo-bianco.png" alt="">
+        </a>
       </div>
-    </header>
+      <div class="listamenu">
+        <ul>
+          <li>
+            <a href="storia.html">storia</a>
+          </li>
+          <li>
+            <a href="archivio-artisti.html">artisti</a>
+          </li>
+          <li>
+            <a href="hometour.html">tour</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
     <main class="container">
       <section class="contenuto">
         <h1>Antonio di Palma</h1>
-        <img src="./immagini/immagini/Artisti/dipalma.jpg">
+        <img src="./immagini/artisti/pag-art-dipalma.jpg">
         <div class="testointerno">
         
             <p> 
@@ -48,26 +48,26 @@
           </div>
        <div class="galleria-immagini">
           </div>
-                <h3><a class="linkrosso" href="/energia-mediterranea.html">Scopri l'opera</a></h3>
+                <h3><a class="linkrosso" href="energia-mediterranea.html">Scopri l'opera</a></h3>
         </section>
       </main>
       <footer>
         <div class="container-footer">
             <div class="imglogofooter1">
                 <a href="index.html">
-                    <img src="./immagini/fiumara-9.png" alt="marchio">
+                    <img src="./immagini/home/logotipo-bianco.png" alt="marchio">
                 </a>
             </div>
             <div class="flexfooter">
                 <div class="imgapplogo">
-                    <img src="./immagini/heme/logoapp.png" alt="">
+                    <img src="./immagini/home/app-1.png" alt="">
                 </div>
                 <div class="imgappstore">
                     <a href="https://apps.apple.com/it/app/walk-learn/id1482776872">
-                        <img src="./immagini/heme/app-store.png" alt="app store">
+                        <img src="./immagini/home/app-store.png" alt="app store">
                     </a>
                     <a href="https://apps.apple.com/it/app/walk-learn/id1482776872">
-                        <img src="./immagini/heme/google-play.png" alt="google store">
+                        <img src="./immagini/home/google-play.png" alt="google store">
                     </a>
                 </div>
             </div>
