--- a/hometour.html
+++ b/hometour.html
@@ -35,7 +35,7 @@
     <main class="headerimage">
         <img class="immagine1" src="./immagini/tour/hometour.jpg" alt="Mappa di Fiumara">
         <div class="text-container">
-            <h1 class="titoloslidernero">I tour della<br>"Fiumara d'arte"</h1>
+            <h1 class="titolosliderazzurro">I tour di<br>Fiumara d'arte</h1>
         </div>
     </main>
     <main class="container">
