--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home page</title>
+        <title>Home</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap">
@@ -33,6 +33,13 @@
       </div>
     </header>
 
+    <main class="headerimage">
+      <img class="immagine1" src="./immagini/home/mappa-fiumara.jpg" alt="Mappa di Fiumara">
+      <div class="text-container">
+          <h1 class="titolosliderbianco">Fiumara d'arte</h1>
+      </div>
+  </main>
+
     <main class="container">
         <div class="containerimage">
         <div class="cardinziale">
@@ -49,39 +56,39 @@
         <h1>Le opere del parco</h1>
         <div class="container-card">
         <div class="card">
-           <a href="la-materia.html"> <img src="./immagini/home/1-opera-home.jpg" alt="La materia poteva non esserci"></a>
+           <img src="./immagini/home/1-opera-home.jpg" alt="La materia poteva non esserci"></a>
            <a href="la-materia.html"><div class="titolocard2"><h2>La materia poteva non esserci</h2></div></a>
         </div>
         <div class="card">
-            <a href="#"><img src="./immagini/home/2-opera-home.jpg" alt="Monumento per un poeta morto"></a>
+            <img src="./immagini/home/2-opera-home.jpg" alt="Monumento per un poeta morto"></a>
             <a href="monumento.html"><div class="titolocard2"><h2>Monumento per un poeta morto</h2></div></a>
         </div>
         <div class="card">
-            <a href=""><img src="immagini/home/3-opera-home.jpg" alt="Stanza di barca d'oro"></a>
+            <img src="immagini/home/3-opera-home.jpg" alt="Stanza di barca d'oro"></a>
             <a href="stanza.html"><div class="titolocard2"><h2>Stanza di barca d'oro</h2></div></a>
         </div>
         <div class="card ">
-            <a href=""><img src="immagini/home/4-opera-home.jpg" alt="Energia mediterranea"></a>
+            <img src="immagini/home/4-opera-home.jpg" alt="Energia mediterranea"></a>
             <a href="energia-mediterranea.html"><div class="titolocard2"><h2>Energia mediterranea</h2></div></a>
         </div>
         <div class="card">
-            <a href=""> <img src="immagini/home/5-opera-home.jpg" alt="Una curva gettata alle spalle del tempo"></a>
+            <img src="immagini/home/5-opera-home.jpg" alt="Una curva gettata alle spalle del tempo"></a>
             <a href="curva.html"><div class="titolocard2"><h2>Una curva gettata alle spalle del tempo</h2></div></a>
          </div>
          <div class="card">
-            <a href=""> <img src="immagini/home/6-opera-home.jpg" alt="Labirinto di Arianna"></a>
+            <img src="immagini/home/6-opera-home.jpg" alt="Labirinto di Arianna"></a>
             <a href="labirinto-di-arianna.html"><div class="titolocard2"><h2>Labirinto di Arianna</h2></div></a>
          </div>
          <div class="card">
-            <a href=""> <img src="immagini/home/7-opera-home.jpg" alt="Arethusa"></a>
+            <img src="immagini/home/7-opera-home.jpg" alt="Arethusa"></a>
             <a href="arethusa.html"><div class="titolocard2"><h2>Arethusa</h2></div></a>
          </div>
          <div class="card">
-            <a href=""> <img src="immagini/home/8-opera-home.jpg" alt="Il muro della vita"></a>
+            <img src="immagini/home/8-opera-home.jpg" alt="Il muro della vita"></a>
             <a href="muro.html"><div class="titolocard2"><h2>Il muro della vita</h2></div></a>
          </div>
          <div class="card">
-            <a href=""> <img src="immagini/home/9-opera-home.jpg" alt="Piramide 38° Parallelo"></a>
+            <img src="immagini/home/9-opera-home.jpg" alt="Piramide 38° Parallelo"></a>
             <a href="piramide.html"><div class="titolocard2"><h2>Piramide 38° Parallelo</h2></div>
          </div>
         </section>
@@ -99,7 +106,7 @@
                 Sono qui per stupirmi. Con lo stupore si inizia ed anche con lo stupore si termina, e tuttavia 
                 non è un cammino vano. Se ammiro un muschio, un cristallo,un fiore oppure un cielo nuvoloso, un mare con il pacato respiro da gigante…   
                 </p>
-                <div class="ctaschedafooter"><a href="#">Leggi la storia della fondazione</a></div>                
+                <div class="ctaschedafooter"><a href="storia.html">Leggi la storia della fondazione</a></div>                
                 </div> 
             </div>
     </section>
