--- a/piramide.html
+++ b/piramide.html
@@ -38,7 +38,7 @@
         <img src="./immagini/opere/piramide-1.jpg">
         <div class="testointerno">
             <h2>
-              <a class="linkrosso" href="/Staccioli.html">Scopri l'artista</a>
+              <a class="linkrosso" href="staccioli.html">Scopri l'artista</a>
             </h2>
              <p> 
                <strong> 38° Parallelo Piramide" è un'imponente installazione artistica creata da Mauro Staccioli nel 2010, </strong> situata a Motta d'Affermo. Staccioli (1937-2018) è noto per le sue sculture che rispondono alle esigenze della società, integrandosi perfettamente con gli ambienti circostanti. Quest'opera, un tetraedro cavo alto 30 metri in acciaio corten, domina la costa e le alture, toccando il 38° parallelo, e rappresenta un punto di incontro tra l'immaginaria misurazione umana e la materialità del landmark.</p>
