--- a/monumento.html
+++ b/monumento.html
@@ -4,38 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>labirinto-di-arianna</title>
+    <title>monumento-per-un-poeta-morto</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap">
 </head>
 <body>
-    <header>
-      <div class="menugenerale">
-        <div class="logomenu">
-          <a href="index.html">
-            <img src="./immagini/fiumara-9.png" alt="">
-          </a>
-        </div>
-        <div class="listamenu">
-          <ul>
-            <li>
-              <a href="storia.html">storia</a>
-            </li>
-            <li>
-              <a href="artisti.html">artisti</a>
-            </li>
-            <li>
-              <a href="tour.html">tour</a>
-            </li>
-          </ul>
-        </div>
+  <header>
+    <div class="menugenerale">
+      <div class="logomenu">
+        <a href="index.html">
+          <img src="./immagini/home/logotipo-bianco.png" alt="">
+        </a>
       </div>
-    </header>
+      <div class="listamenu">
+        <ul>
+          <li>
+            <a href="storia.html">storia</a>
+          </li>
+          <li>
+            <a href="archivio-artisti.html">artisti</a>
+          </li>
+          <li>
+            <a href="hometour.html">tour</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
     <main class="container">
       <section class="contenuto">
         <h1>Monumento per un poeta morto</h1>
-        <img src="./immagini/immagini/heme/arte-77.jpg">
+        <img src="./immagini/opere/poeta-morto-1.jpg">
         <div class="testointerno">
             <h2>
               <a class="linkrosso" href="festa.html">Scopri l'artista</a>
@@ -52,10 +52,10 @@
           </div>
        <div class="galleria-immagini">
             <div>
-              <img src="./immagini/immagini/heme/arte-75.jpg" alt="curva-1">
+              <img src="./immagini/opere/poeta-morto-2.jpg" alt="curva-1">
             </div>
             <div>
-              <img src="./immagini/immagini/heme/arte-76.jpg" alt="curva-2">
+              <img src="./immagini/opere/poeta-morto-3.jpg" alt="curva-2">
             </div>
           </div>
                 <h3><a class="linkrosso" href="hometour.html">Scopri come raggiungerlo</a></h3>
@@ -65,19 +65,19 @@
         <div class="container-footer">
             <div class="imglogofooter1">
                 <a href="index.html">
-                    <img src="./immagini/fiumara-9.png" alt="marchio">
+                    <img src="./immagini/home/logotipo-bianco.png" alt="marchio">
                 </a>
             </div>
             <div class="flexfooter">
                 <div class="imgapplogo">
-                    <img src="./immagini/heme/logoapp.png" alt="">
+                    <img src="./immagini/home/app-1.png" alt="">
                 </div>
                 <div class="imgappstore">
                     <a href="https://apps.apple.com/it/app/walk-learn/id1482776872">
-                        <img src="./immagini/heme/app-store.png" alt="app store">
+                        <img src="./immagini/home/app-store.png" alt="app store">
                     </a>
                     <a href="https://apps.apple.com/it/app/walk-learn/id1482776872">
-                        <img src="./immagini/heme/google-play.png" alt="google store">
+                        <img src="./immagini/home/google-play.png" alt="google store">
                     </a>
                 </div>
             </div>
