add HTML, CSS, IMG

--- a/archivio-artisti.html
+++ b/archivio-artisti.html
@@ -40,39 +40,39 @@
         <h1>Archivio Artisti</h1>
         <div class="container-card">
         <div class="card">
-           <img src="./immagini/artisti/pietro-consagra.jpg" alt="Pietro-Consagra"></a>
+           <a href="consagra.html"><img src="./immagini/artisti/pietro-consagra.jpg" alt="Pietro-Consagra"></a>
            <a href="consagra.html"><div class="titolocard2"><h2>Pietro Consagra</h2></div></a>
         </div>
         <div class="card">
-            <img src="./immagini/artisti/tano-festa.jpg" alt="Tano-Festa"></a>
+            <a href="festa.html"><img src="./immagini/artisti/tano-festa.jpg" alt="Tano-Festa"></a>
             <a href="festa.html"><div class="titolocard2"><h2>Tano Festa</h2></div></a>
         </div>
         <div class="card">
-            <img src="immagini/artisti/hidetoshi-nagasawa.jpg" alt="hidetoshi-Nagasawa"></a>
+            <a href="nagasawa.html"><img src="immagini/artisti/hidetoshi-nagasawa.jpg" alt="hidetoshi-Nagasawa"></a>
             <a href="nagasawa.html"><div class="titolocard2"><h2>Hidetoshi Nagasawa</h2></div></a>
         </div>
         <div class="card ">
-            <img src="immagini/artisti/antonio-di-palma.jpg" alt="Antonio-di-palma"></a>
+            <a href="dipalma.html"><img src="immagini/artisti/antonio-di-palma.jpg" alt="Antonio-di-palma"></a>
             <a href="dipalma.html"><div class="titolocard2"><h2>Antonio di Palma</h2></div></a>
         </div>
         <div class="card">
-            <img src="immagini/artisti/paolo-schiavocampo.jpg" alt="paolo-schiavocampo"></a>
+            <a href="schiavocampo.html"><img src="immagini/artisti/paolo-schiavocampo.jpg" alt="paolo-schiavocampo"></a>
             <a href="schiavocampo.html"><div class="titolocard2"><h2>Paolo Schiavocampo</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/artisti/italo-lanfredini.jpg" alt="italo-lanfredini"></a>
+            <a href="lanfredini.html"><img src="immagini/artisti/italo-lanfredini.jpg" alt="italo-lanfredini"></a>
             <a href="lanfredini.html"><div class="titolocard2"><h2>Italo Lanfredini</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/artisti/dorazio.jpg" alt="piero-dorazio"></a>
+            <a href="dorazio.html"><img src="immagini/artisti/dorazio.jpg" alt="piero-dorazio"></a>
             <a href="dorazio.html"><div class="titolocard2"><h2>Piero Dorazio</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/artisti/ilmuro.jpg" alt="Il muro della vita"></a>
+            <a href="muro.html"><img src="immagini/artisti/ilmuro.jpg" alt="Il muro della vita"></a>
             <a href="muro.html"><div class="titolocard2"><h2>Artisti Vari</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/artisti/mauro-staccioli.jpg" alt="mauro-staccioli"></a>
+            <a href="staccioli.html"><img src="immagini/artisti/mauro-staccioli.jpg" alt="mauro-staccioli"></a>
             <a href="staccioli.html"><div class="titolocard2"><h2>Mauro Staccioli</h2></div>
          </div>
         </section>
