--- a/curva.html
+++ b/curva.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>una-curva-gettata-alle-spalle-del-tempo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap">
-</head>
-<body>
-  <header>
-    <div class="menugenerale">
-      <div class="logomenu">
-        <a href="index.html">
-          <img src="./immagini/home/logotipo-bianco.png" alt="">
-        </a>
+  </head>
+  <body>
+    <header>
+      <div class="menugenerale">
+        <div class="logomenu">
+          <a href="index.html">
+            <img src="./immagini/home/logotipo-bianco.png" alt="">
+          </a>
+        </div>
+        <div class="listamenu">
+          <ul>
+            <li>
+              <a href="storia.html">storia</a>
+            </li>
+            <li>
+              <a href="archivio-artisti.html">artisti</a>
+            </li>
+            <li>
+              <a href="tour.html">tour</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="listamenu">
-        <ul>
-          <li>
-            <a href="storia.html">storia</a>
-          </li>
-          <li>
-            <a href="artisti.html">artisti</a>
-          </li>
-          <li>
-            <a href="tour.html">tour</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </header>
+    </header>
     <main class="container">
       <section class="contenuto">
         <h1>Una curva gettata alle spalle del tempo</h1>
