--- a/la-materia.html
+++ b/la-materia.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>la-materia</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>la-materia-poteva-non-esserci</title>
+    <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap">
-</head>
-<body>
+  </head>
+  <body>
     <header>
       <div class="menugenerale">
         <div class="logomenu">
@@ -23,7 +23,7 @@
               <a href="storia.html">storia</a>
             </li>
             <li>
-              <a href="artisti.html">artisti</a>
+              <a href="archivio-artisti.html">artisti</a>
             </li>
             <li>
               <a href="tour.html">tour</a>
