--- a/index.html
+++ b/index.html
@@ -56,45 +56,45 @@
         <h1>Le opere del parco</h1>
         <div class="container-card">
         <div class="card">
-           <img src="./immagini/home/1-opera-home.jpg" alt="La materia poteva non esserci"></a>
-           <a href="la-materia.html"><div class="titolocard2"><h2>La materia poteva non esserci</h2></div></a>
+          <a href="la-materia.html"><img src="./immagini/home/1-opera-home.jpg" alt="La materia poteva non esserci"></a>
+          <a href="la-materia.html"><div class="titolocard2"><h2>La materia poteva non esserci</h2></div></a>
         </div>
         <div class="card">
-            <img src="./immagini/home/2-opera-home.jpg" alt="Monumento per un poeta morto"></a>
+            <a href="monumento.html"><img src="./immagini/home/2-opera-home.jpg" alt="Monumento per un poeta morto"></a>
             <a href="monumento.html"><div class="titolocard2"><h2>Monumento per un poeta morto</h2></div></a>
         </div>
         <div class="card">
-            <img src="immagini/home/3-opera-home.jpg" alt="Stanza di barca d'oro"></a>
+            <a href="stanza.html"><img src="immagini/home/3-opera-home.jpg" alt="Stanza di barca d'oro"></a>
             <a href="stanza.html"><div class="titolocard2"><h2>Stanza di barca d'oro</h2></div></a>
         </div>
         <div class="card ">
-            <img src="immagini/home/4-opera-home.jpg" alt="Energia mediterranea"></a>
+            <a href="energia-mediterranea.html"><img src="immagini/home/4-opera-home.jpg" alt="Energia mediterranea"></a>
             <a href="energia-mediterranea.html"><div class="titolocard2"><h2>Energia mediterranea</h2></div></a>
         </div>
         <div class="card">
-            <img src="immagini/home/5-opera-home.jpg" alt="Una curva gettata alle spalle del tempo"></a>
+            <a href="curva.html"><img src="immagini/home/5-opera-home.jpg" alt="Una curva gettata alle spalle del tempo"></a>
             <a href="curva.html"><div class="titolocard2"><h2>Una curva gettata alle spalle del tempo</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/home/6-opera-home.jpg" alt="Labirinto di Arianna"></a>
+            <a href="labirinto-di-arianna.html"><img src="immagini/home/6-opera-home.jpg" alt="Labirinto di Arianna"></a>
             <a href="labirinto-di-arianna.html"><div class="titolocard2"><h2>Labirinto di Arianna</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/home/7-opera-home.jpg" alt="Arethusa"></a>
+            <a href="arethusa.html"><img src="immagini/home/7-opera-home.jpg" alt="Arethusa"></a>
             <a href="arethusa.html"><div class="titolocard2"><h2>Arethusa</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/home/8-opera-home.jpg" alt="Il muro della vita"></a>
+            <a href="muro.html"><img src="immagini/home/8-opera-home.jpg" alt="Il muro della vita"></a>
             <a href="muro.html"><div class="titolocard2"><h2>Il muro della vita</h2></div></a>
          </div>
          <div class="card">
-            <img src="immagini/home/9-opera-home.jpg" alt="Piramide 38° Parallelo"></a>
+            <a href="piramide.html"><img src="immagini/home/9-opera-home.jpg" alt="Piramide 38° Parallelo"></a>
             <a href="piramide.html"><div class="titolocard2"><h2>Piramide 38° Parallelo</h2></div>
          </div>
         </section>
         <section>
          <div class="card2footer">
-            <a href="#"> <img class="immaginefooter2" src="immagini/home/home-presti.jpg" alt="antonio presti"></a>
+            <a href="storia.html"> <img class="immaginefooter2" src="immagini/home/home-presti.jpg" alt="antonio presti"></a>
         </div>
 
         <div class="containerimagefooter">
