--- a/opera-labirinto.html
+++ b/opera-labirinto.html
@@ -38,7 +38,7 @@
         <img src="./immagini/opere/lab-arianna-1.jpg">
         <div class="testointerno">
           <h2>
-            <a class="linkrosso" href="lanfredini.html">Scopri l'artista</a>
+            <a class="linkrosso" href="/lanfredini.html">Scopri l'artista</a>
           </h2>
           <p>
             <strong>L'opera "Labirinto di Arianna" è stata selezionata nel 1988</strong> durante un concorso bandito da Antonio Presti e si trova sulla cima di una collina di fronte a Castel di Lucio, adattandosi alla sua inclinazione naturale.
@@ -68,7 +68,7 @@
             <img src="./immagini/opere/lab-arianna-3.jpg" alt="labirinto_2">
           </div>
         </div>
-              <h3><a class="linkrosso" href="hometour.html">Scopri come raggiungerlo</a></h3>
+              <h3><a class="linkrosso" href="/lanfredini.html">Scopri come raggiungerlo</a></h3>
       </section>
     </main>
     <footer>
